--- a/application/app/views/clinic/birthfollowuplist.rhtml
+++ b/application/app/views/clinic/birthfollowuplist.rhtml
@@ -1,13 +1,8 @@
 <script type="text/javascript">
-	var person_id
+  var person_id
   var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
   var tt_cancel_show = "/clinic?status=endcall";
 
-  function changeNextButtonText(text){
-    $('nextButton').innerHTML = "<span>" + text + "</span>";  
-  }
-  
-  
   function showVlLabTrail(person_id,hsa_id){
    
     c = document.getElementById('content');
@@ -111,7 +106,7 @@
      
     </style>
 
-<form id='confirm' action="/clinic/followup" method='post'> %>
+<form id='confirm' action="/clinic/housekeeping" method='post'> %>
 <% if @follow_ups.blank? %>
       <label for="person">No patients were found:</label>
     <% else -%>
@@ -119,7 +114,7 @@
     <% end -%>
     <select name="person" id="person">
       <% @follow_ups.each do |person| -%>
-        <option value="<%= person[:patient_id]%>" onmousedown="changeNextButtonText('Select Patient');showPopup('<%= person[:patient_id] %>','<%= person[:hsa_id] %>')">
+        <option value="<%= person[:patient_id]%>" onmousedown="showPopup('<%= person[:patient_id] %>','<%= person[:hsa_id] %>')">
          
           <%= person[:given_name] -%> (<%= person[:family_name_prefix] -%>) <%= person[:family_name] -%>
           H. Vlg: <%= person[:address2] -%> G. Age: <%= person[:gestation_age] -%> HSA: <%= person[:hsa_name] -%>
@@ -127,6 +122,7 @@
         </option>
       <% end -%>   
     <%= hidden_field_tag("source", "HK") %>
+    <%= hidden_field_tag("task", "housekeeping") %>
    <%= submit_tag "Finish" %>
 </form>
 
