--- a/application/app/views/encounters/pregnancy_status.rhtml
+++ b/application/app/views/encounters/pregnancy_status.rhtml
@@ -35,6 +35,8 @@
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
     <%= hidden_field_tag("editing",       true) %>
   <%end%>
-
+<% unless params[:anc_connect_workflow_start].blank? %>
+    <% #raise "jeje" %>
+<% end %>
 	<%= submit_tag 'Finish' %>
 <% end %>
