Redirecting to patient's dashboard after editing ANC connect

--- a/application/app/views/encounters/anc_visit_pregnacy_encounter.rhtml
+++ b/application/app/views/encounters/anc_visit_pregnacy_encounter.rhtml
@@ -53,6 +53,6 @@
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
     <%= hidden_field_tag("editing",       true) %>
   <%end%>
-
+    <%= hidden_field_tag("edit_anc_connect",  true) %>
 	<%= submit_tag 'Finish' %>
 <% end %>
