Modifying HSA performance report. Changing address2 to city_village

--- a/application/app/views/report/hsa_performance.rhtml
+++ b/application/app/views/report/hsa_performance.rhtml
@@ -66,10 +66,10 @@
               <td><%= district %></td>
               <td><%= health_center %></td>
               <td><%= hsa_name %></td>
-              <td><%= total_clients_enrolled %></td>
-              <td><%= new_enrollments %></td>
-              <td><%= on_time_anc_rate %></td>
-              <td><%= facility_delivery_rate %></td>
+              <td><span style="padding-left: 30%;"><%= total_clients_enrolled %></span></td>
+              <td><span style="padding-left: 30%;"><%= new_enrollments %></span></td>
+              <td><span style="padding-left: 30%;"><%= on_time_anc_rate %></span></td>
+              <td><span style="padding-left: 30%;"><%= facility_delivery_rate %></span></td>
           <% end %>
            <% end %>
         </tr>
