--- a/application/app/views/encounters/client_response.rhtml
+++ b/application/app/views/encounters/client_response.rhtml
@@ -1,7 +1,14 @@
 <script type="text/javascript" language="javascript">
-		<% if session[:house_keeping_mode] %>
-			var tt_cancel_show = "/clinic";
-    	var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
+	<% if session[:house_keeping_mode] %>
+			<%
+			if session[:report_task].to_s.upcase == "anc_visit".upcase
+			 		task = "anc"
+			 else
+			 		task = session[:report_task].to_s
+			 end
+			%>
+			var tt_cancel_show = "/clinic/district?task=<%=task%>&district=<%=session[:district]%>";
+			var tt_cancel_destination = "/clinic/district?task=<%=task%>&district=<%=session[:district]%>";
 		<% else %>
 			var tt_cancel_show = "/patients/show/<%= params[:patient_id] %>";
 			var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>";		
