--- a/application/app/views/patients/anc_info.rhtml
+++ b/application/app/views/patients/anc_info.rhtml
@@ -1,6 +1,19 @@
 
 <script>
-  var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>"
+	<% if session[:house_keeping_mode] %>
+			<%
+			if session[:report_task].to_s.upcase == "anc_visit".upcase
+			 		task = "anc"
+			 else
+			 		task = session[:report_task].to_s
+			 end
+			%>
+			var tt_cancel_show = "/clinic/district?task=<%=task%>&district=<%=session[:district]%>";
+			var tt_cancel_destination = "/clinic/district?task=<%=task%>&district=<%=session[:district]%>";
+	<% else %>
+		var tt_cancel_show = "/patients/show/<%= params[:patient_id] %>";
+		var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>";		
+	<% end %>	
 </script>
 <form id='anc_info_form' action="anc_info" method='post'>
 
@@ -13,4 +26,5 @@
 
   <%= hidden_field_tag :patient_id, params[:patient_id] %>
   <%= hidden_field_tag("visit",params[:visit]) if params[:visit].present? %>
+  <%= hidden_field_tag("hsa_id",params[:hsa_id]) if params[:hsa_id].present? %>
 </form>
