--- a/application/app/views/clinic/ancfollowuplist.rhtml
+++ b/application/app/views/clinic/ancfollowuplist.rhtml
@@ -1,8 +1,14 @@
 <script type="text/javascript">
 	var person_id
-  var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
-  var tt_cancel_show = "/clinic?status=endcall";
 
+	<% if session[:house_keeping_mode] %>
+		var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
+		var tt_cancel_show = "/clinic?status=endcall";
+	<% else %>
+		var tt_cancel_show = "/patients/show/<%= params[:patient_id] %>";
+		var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>";		
+	<% end %>
+		
   function changeNextButtonText(text){
     $('nextButton').innerHTML = "<span>" + text + "</span>";  
   }
