--- a/application/app/views/encounters/client_response.rhtml
+++ b/application/app/views/encounters/client_response.rhtml
@@ -1,6 +1,11 @@
 <script type="text/javascript" language="javascript">
-		tt_cancel_show = "/patients/show/<%= params[:patient_id] %>";
-		tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>";
+		<% if session[:house_keeping_mode] %>
+			var tt_cancel_show = "/clinic";
+    	var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
+		<% else %>
+			var tt_cancel_show = "/patients/show/<%= params[:patient_id] %>";
+			var tt_cancel_destination = "/patients/show/<%= params[:patient_id] %>";		
+		<% end %>
 </script>
 <style>
  #num{
