--- a/application/app/views/clinic/ancfollowuplist.rhtml
+++ b/application/app/views/clinic/ancfollowuplist.rhtml
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 	var person_id
 
-	<% if session[:house_keeping_mode] %>
+	<% if session[:house_keeping_mode] || params[:patient_id].blank? %>
 		var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
 		var tt_cancel_show = "/clinic?status=endcall";
 	<% else %>
