--- a/application/app/views/report/hsa_performance.rhtml
+++ b/application/app/views/report/hsa_performance.rhtml
@@ -41,7 +41,6 @@
             <td colspan="6"></td>
           </tr>
           <tr>
-            <td><b>District</b></td>
             <td><b>Health Center</b></td>
             <td><b>HSA Name</b></td>
             <td><b>Clients Enrolled(Total)</b></td>
@@ -51,28 +50,28 @@
           </tr>
         </thead>
 
-        <%  (@report || []).each do |district, values|%>
-        <tr>
-          <% values.each do |health_center, data| %>
-              <% data.each do |k, v| %>
-              <%
-                health_center = k
-                hsa_name = v["hsa_name"]
-                total_clients_enrolled = v["total_clients_enrolled"]
-                new_enrollments = v["new_enrollments"]
-                on_time_anc_rate = v["on_time_anc_rate"]
-                facility_delivery_rate = v["facility_delivery_rate"]
-              %>
-              <td><%= district %></td>
-              <td><%= health_center %></td>
-              <td><%= hsa_name %></td>
-              <td><span style="padding-left: 30%;"><%= total_clients_enrolled %></span></td>
-              <td><span style="padding-left: 30%;"><%= new_enrollments %></span></td>
-              <td><span style="padding-left: 30%;"><%= on_time_anc_rate %></span></td>
-              <td><span style="padding-left: 30%;"><%= facility_delivery_rate %></span></td>
-          <% end %>
+        <%  (@report || []).each do |data_values|%>
+	<tr>
+            <td width="25%" colspan = 6 class="cellleft cellbottom main-table-cell" style="background-color:ddd; text-align:center;font-weight: bold; font-size: large; font-style: italic;">
+		<%= @grouping.humanize + " beginning "+ data_values[:start_date].to_date.strftime("%d-%b-%Y") + " ending " + data_values[:end_date].to_date.strftime("%d-%b-%Y")%></td>
+          </tr>
+        
+          <% data_values[:hc_details].each do |health_center_details| %>
+	      <tr> 
+		<td><%= health_center_details[:health_center] %></td>
+	      </tr>
+              <% health_center_details[:hsa_details].each do |details| %>
+		      <tr>
+		      <td></td>
+		      <td><%= details[:name] %></td>
+		      <td><%= details[:total] %></td>
+		      <td><%= details[:new] %></td>
+		      <td><%= details[:on_time] %></td>
+		      <td><%= details[:facility_rate] %></td>
+		      </tr>
+              <% end %>
            <% end %>
-        </tr>
+        
         <% end %>
       </table>
 
