--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -180,6 +180,8 @@
     <% if @patient_needs_follow_up == true %>
         <option value='/clinic/followup?person=<%=@patient.id%>&source=PD'>Follow up</option>
     <% end %>
+    
+    <option value="/clinic/district?task=anc&district=<%=session[:district]%>&patient_id=<%=@patient.id%>" ttize="170px">ANC follow up</option>
   </select>
 </div>
 
