--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -1,19 +1,21 @@
 <style>
+	<% if ! session[:house_keeping_mode] == false  %>
 	#tabPageContainer {
 		height: 71%;
 	}
-	
+
 	#footer {
 		height: 134px;
 	}
-	
+
 	#bplan {
 		float:right;
 	}
-	
+
 	#bdel {
 		margin-left:100px;
 	}
+	<% end %>
 </style>
 
 <script language="javascript">
@@ -48,10 +50,10 @@
     <!--<option value="/people/find_by_anc_number" ttSize="170px">Find by ANC ID</option>-->
     
     <% if ! session[:house_keeping_mode] == false  %>
-        <option value="/clinic/new_call?task=followup" ttSize="130px">Follow up</option>
+				<option value="/clinic/new_call?task=followup" ttSize="130px">Follow up</option>
+				<option value="/clinic/new_call?task=anc"  ttID="anc_follow" ttSize="170px">ANC Follow up</option>
+				<option ttID="bplan" value="/clinic/new_call?task=birth_plan" ttMleft="211px" ttFloat="left" ttSize="170px">Birth Plan</option>
+				<option ttID="bdel" value="/clinic/new_call?task=delivery" ttFloat="left" ttSize="130px">Delivery</option>
     <%end%>
-    <option value="/clinic/new_call?task=anc"  ttID="anc_follow" ttSize="170px">ANC Follow up</option>
-    <option ttID="bplan" value="/clinic/new_call?task=birth_plan" ttMleft="211px" ttFloat="left" ttSize="170px">Birth Plan</option>
-    <option ttID="bdel" value="/clinic/new_call?task=delivery" ttFloat="left" ttSize="130px">Delivery</option>
   </select>
 </div>
