--- a/application/app/views/encounters/client_response.rhtml
+++ b/application/app/views/encounters/client_response.rhtml
@@ -21,7 +21,7 @@
 </style>
 <% form_tag :controller => "encounters", :action => "client_response", :method => :post do |f| %>
 	<%session_date = session[:datetime] || Time.now() %>
-	<% visit_helptext = "#{(@patient.person.names.first.given_name.nil? ? " " : @patient.person.names.first.given_name.nil) + " " + @patient.person.names.first.family_name + " # " + (@phone_number.value == "Unknown" ? " " : @phone_number.value) } answered?" %>
+	<% visit_helptext = "#{(@patient.person.names.first.given_name.nil? ? " " : @patient.person.names.first.given_name) + " " + @patient.person.names.first.family_name + " # " + (@phone_number.value == "Unknown" ? " " : @phone_number.value) } answered?" %>
 	
 	
   <%= touch_select_tag "", @patient, options_for_select([' ', 'Yes', 'No']),
