--- a/application/app/views/clinic/administration.html.erb
+++ b/application/app/views/clinic/administration.html.erb
@@ -25,7 +25,11 @@
         <h2>Select administrative task</h2>
         <base target="_parent">
             <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.location= '/clinic/users?dashboard=clinic_administration'" target="_parent "class="blue"><span>Manage Users</span></button><br/>
+            
             <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.location = '/clinic/clinichome?active_tab=tab3&dashboard=clinic_administration&source_url=clinic_dashboard'" target="_parent" class="blue"><span>Manage Clinics</span></button><br/>
+           
+           
+            <button style="margin: 5px 0px 0px; min-width: 230px;" onMouseDown="window.location = '/clinic/clinichome?active_tab=tab3&dashboard=clinic_hsa_management&source_url=clinic_dashboard'" target="_parent" class="blue"><span>Manage HSAs</span></button><br/>            
         </base>
       </div>
       <!--/div-->
