HSA update demographics

--- a/application/app/views/hsa_management/edit.rhtml
+++ b/application/app/views/hsa_management/edit.rhtml
@@ -63,7 +63,7 @@
   </tr>
   <tr>
     <td>
-      <%= link_to "District:", "/hsa_management/edit_demographics?field=district&id=#{@hsa.person_id}" -%>
+      <%= link_to "District:", "/hsa_management/edit_demographics?field=current_district&id=#{@hsa.person_id}" -%>
     </td>
     <td class="label"><%= @hsa_details[:district] rescue nil %></td>
     <td>
