--- a/application/app/views/hsa_management/edit_demographics.rhtml
+++ b/application/app/views/hsa_management/edit_demographics.rhtml
@@ -77,25 +77,49 @@
         :validationMessage => "Not a valid phone number"}%>
 
 <%when 'secondary_phone'%>
-  <%= text_field_tag "hsa[home_phone_number]",  params[:home_phone_number],
+  <%= text_field_tag "person[attributes][home_phone_number]",  params[:home_phone_number],
           {
             :field_type => 'number',
             :helpText => 'Home Phone Number',
             :validationRule => "^0\\d{7}$|Unknown|Not Available|N\/A|^0\\d{9}$",
             :validationMessage => "Not a valid phone number",
-            :tt_pageStyleClass => "nota",
-            :id => 'home_phone_number'
+            :tt_pageStyleClass => "nota"
           }%>
 
 <%when 'current_district'%>
- <%= text_field_tag "person[addresses][state_province]", params[:state_province], {
-    :id => 'state_province',
-    :field_type => 'alpha',
-    :helpText => 'Current District',
-    :tt_requireNextClick => false, 
-    :ajaxURL => '/people/district/District?search_string=',
-    :allowFreeText => false,
-    :tt_onLoad => "seen(tstCurrentPage)" } %>
+     <%= text_field_tag "person[addresses][state_province]", params[:state_province], {
+        :id => 'state_province',
+        :field_type => 'alpha',
+        :helpText => 'Current District',
+        :tt_requireNextClick => false, 
+        :ajaxURL => '/people/district/District?search_string=',
+        :allowFreeText => false,
+        :tt_onLoad => "seen(tstCurrentPage)" } %>
+
+     <%= text_field_tag "hsa[health_center]",  params[:health_center], {
+          :id => 'health_center',
+          :field_type => 'alpha', 
+          :helpText => 'Health Center', 
+          :ajaxURL => '/people/health_center/HealthCenter?search_string=', 
+          :tt_onLoad => 'set_ajaxURL_for_suggestions("/people/health_center/HealthCenter?filter_value=" ,document.getElementById("state_province").value)',
+      :allowFreeText => false }%>
+
+     <%= text_field_tag "person[addresses][county_district]",  params[:county_district], {
+          :id => 'ta',
+          :field_type => 'alpha', 
+          :helpText => 'Current Traditional Authority (TA)', 
+          :ajaxURL => '/people/traditional_authority_demographics/TraditionalAuthority?search_string=', 
+          :tt_onLoad => 'set_ajaxURL_for_suggestions("/people/traditional_authority_demographics/TraditionalAuthority?filter_value=" ,document.getElementById("state_province").value)',
+      :allowFreeText => false }%>
+
+      <%= text_field_tag "person[addresses][city_village]", params[:city_village], {
+           :id => 'address2', 
+           :field_type => 'alpha', 
+           :helpText => 'Current Village',
+           :ajaxURL => '/people/village_demographics?search_string=', 
+           :allowFreeText => true, 
+           :condition => '$("address2").value == "" || skipped[tstCurrentPage] == 1', 
+           :tt_onLoad => 'set_ajaxURL_for_suggestions("/people/village_demographics?filter_value=" ,document.getElementById("ta").value);seen(tstCurrentPage);' } if ask_home_village %>
 
 <%when 'health_centre' %>
   <%= text_field_tag "hsa[health_center]",  params[:health_center], {
@@ -104,7 +128,7 @@
        :helpText => 'Health Center', 
        :ajaxURL => '/people/health_center/HealthCenter?search_string=', 
        :tt_onLoad => 'set_ajaxURL_for_suggestions("/people/health_center/HealthCenter?filter_value=" ,document.getElementById("state_province").value)',
-       :allowFreeText => false }%>
+       :allowFreeText => false }%>       
 
 <%when 'current_ta'%>
   <%= text_field_tag "person[addresses][state_province]", params[:state_province], {
@@ -130,6 +154,5 @@
 
   <%= hidden_field_tag "person_id", @hsa.id %>
   
-  <%= submit_tag "Update person" %>
   
 <% end %>
