change text for follow up button for 'ANC' to 'ANC follow up'

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -32,6 +32,6 @@
     <% if ! session[:house_keeping_mode] == false  %>
         <option value="/clinic/new_call?task=followup" ttSize="130px">Follow up</option>
     <%end%>
-    <option value="/clinic/new_call?task=anc" ttSize="100px">ANC</option>
+    <option value="/clinic/new_call?task=anc" ttSize="170px">ANC follow up</option>
   </select>
 </div>
